# sb-rag-agent-project

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  STRUCTURE.md  deco_skill.md  work_rule.md
.claude/: settings.json
.claude/commands/: claude_init.md  harness.md  update-work-rules.md
.claude/hooks/: tdd-and-push.ps1
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  chunk_config.json  desc.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  work_rule.md
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  scheduler.py
backend/app/db/: client.py
backend/app/db/queries/: conversations.py  videos.py
backend/app/routers/: chat.py  conversations.py  ingest.py
backend/app/schemas/: api.py
backend/app/services/: cache_service.py  chunking_service.py  embedding_service.py  pinecone_service.py  rag_service.py  rerank_service.py  transcription_service.py  youtube_service.py
backend/app/workers/: ingestion_worker.py
backend/scripts/: chunk_optimizer.py  cli_test.py
backend/tests/: conftest.py  test_cache_service.py  test_chat.py  test_chunking_service.py  test_conversations.py  test_db_queries.py  test_embedding_service.py  test_health.py  test_ingest.py  test_ingestion_worker.py  test_pinecone_service.py  test_rag_service.py  test_rerank_service.py  test_scheduler.py  test_transcription_service.py  test_youtube_service.py
docs/: ADR.md  API.md  ARCHITECTURE.md  NEED_ENV.md  PRD.md  SUPABASE_SCHEMA.sql  UI_GUIDE.md
frontend/: .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  work_rule.md
frontend/src/: middleware.ts  proxy.ts
frontend/src/__tests__/: ChatInput.test.tsx  ChatMessage.test.tsx  SourceCard.test.tsx
frontend/src/app/: ChatPageClient.tsx  animations.ts  error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: chat-input.tsx  chat-message.tsx  empty-state.tsx  sidebar.tsx  sources-list.tsx  spinner.tsx
scripts/: generate-test-report.py  html-to-pdf.js  init-backend.ps1  init-frontend.ps1
(+46 files in other folders)
