[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sv-rag-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "supabase>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "arq>=0.25.0",
    "loguru>=0.7.2",
    "sentry-sdk[fastapi]>=2.0.0",
    "openai>=1.30.0",
    "pinecone-client>=3.2.0",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.1",
    "pydub>=0.25.1",
    "redis>=5.0.4",
    "google-api-python-client>=2.130.0",
    "isodate>=0.6.1",
    "apscheduler>=3.10.4",
    "pytz>=2024.1",
    "cohere>=5.5.0",
    "tiktoken>=0.7.0",
    "kss>=4.5.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP", "S", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "E501", "S108"]
"scripts/*" = ["S101", "ANN", "T201"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
    "arq.*",
    "pinecone.*",
    "cohere.*",
    "kss.*",
    "tiktoken.*",
    "pydub.*",
    "apscheduler.*",
    "pytz.*",
    "googleapiclient.*",
    "isodate.*",
    "redis.*",
    "jose.*",
    "slowapi.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "alembic.*", "scripts.*"]
disallow_untyped_defs = false
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
fail_under = 80
